1999-08-17  Paul Eggert  <eggert@twinsun.com>

	* m4/largefile.m4 (AC_SYS_LARGEFILE): Fix typo: missing comma
	in value for _FILE_OFFSET_BITS, which broke ports to HP-UX 10.20.

1999-08-05  Jim Meyering  <meyering@ascend.com>

	* getline.m4: Rename test file from conftestdata to conftest.data
	to avoid conflicts with `conftest' on 8+3 filesystems.
	Suggestion from Eli Zaretskii.

1999-08-04  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: Move a 4-line block of code from the configure.in of
	fileutils and sh-utils (textutils's getline test was inadequate).
	(AM_FUNC_GETLINE): Run this test.
	(AC_CHECK_FUNCS): Check for getdelim.
	Reported by Bob Proulx.

1999-08-02  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: Add a comment.

1999-08-01  Jim Meyering  <meyering@ascend.com>

	* mktime.m4 (AC_FUNC_MKTIME): Undefine to avoid syntax errors from m4.

1999-08-01  Paul Eggert  <eggert@twinsun.com>

	* lfs.m4: Remove this file.
	* largefile.m4: New file.  It contains the old contents of
	lfs.m4, except that all names with prefix AC_LFS have been
	changed to use the prefix AC_SYS_LARGEFILE instead, to be
	compatible with future autoconf versions.  Also, some minor m4
	quoting problems have been fixed.

1999-07-16  Paul Eggert  <eggert@twinsun.com>

	* ulonglong.m4 (jm_AC_TYPE_UNSIGNED_LONG_LONG): Make sure
	that we can shift, multiply and divide unsigned long long
	values; Ultrix cc can't do it.

1999-07-14  Paul Eggert  <eggert@twinsun.com>

	* xstrtoumax.m4 (jm_AC_PREREQ_XSTRTOUMAX): Check whether
	<inttypes.h> defines strtoumax as a macro (and not as a
	function).

1999-07-05  Paul Eggert  <eggert@twinsun.com>

	* gettext.m4 (AM_WITH_NLS): Remove unnecessary lines.
	Fix typo: $nls_cv_header_intl was misspelled as $nsl_cv_header_intl.
	(AM_GNU_GETTEXT): Fix problem with brackets and m4 quoting,
	and simplify the shell code.

1999-07-03  Paul Eggert  <eggert@twinsun.com>

	* mktime.m4: New file, which is a preview of what should appear