@@ -1,3 +1,7 @@
+1999-08-29  Jim Meyering  <meyering@ascend.com>
+
+	* bison.m4: New file.
+
 1999-08-17  Paul Eggert  <eggert@twinsun.com>
 
 	* m4/largefile.m4 (AC_SYS_LARGEFILE): Fix typo: missing comma
